# SPOT_VISO_Cleaned2

./: .gitignore  .pre-commit-config.yaml  ARCH_GAPS.md  ARCH_MAP.md  ARCH_PROPOSAL.md  AddClasses.py  Axis.py  AxisVariables.py  CALL_GRAPH.md  CLI_COMMANDS.md  CLI_USAGE.md  DECK_CONSTRUCTION.md  FOUNDATION_CONSTRUCTION.md  IMPLEMENTATION_SUMMARY.md  OPEN_QUESTIONS.md  Objects.py  PIER_CONSTRUCTION.md  README.md  REPORT_SUMMARY.md  REPORT_TECHNICAL.md  SPOT_Filters.py  STREAMLINED_ARCHITECTURE.md  STREAMLINED_WORKFLOW_GUIDE.md  TEST_SCRIPTS_README.md  Test.py  Utils.py  Visio_loader.py  Visualization.py  WORKFLOW.md  analyze_rotation.py  check_coords.py  combined_objects_3d.html  config.yaml  data_loader.py  debug_rotation.py  demo_creative_plots.py  demo_flexibility.py  linear_object_builder.py  main.py  pyproject.toml  (+20 more)
MASTER_SECTION/: KBB_DeckSection.json  Kulosaari_MasterCrossSection.json  Kulosaari_MasterCrossSection_more_ref.json  MASTER_DeckCrBm-1Gird-Slab.json  MASTER_DeckMain-1Gird-Slab.json  MASTER_Foundation.json  MASTER_Pier.json  PierMaster.json  SectionData.json  SectionData_crsb.json  example-section-thinWalled.json  pier_test.json
models/: __init__.py  axis.py  axis_variable.py  base.py  bearing_articulation.py  cross_section.py  deck_object.py  foundation_object.py  linear_object.py  main_station.py  mapping.py  pier_object.py  plotter.py  secondary_object.py  utils.py  vis_adapter.py  viso_context.py  viso_ploter.py
scripts/: README.md  check_docs_sync.py
spot/: __init__.py
spot_viso.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+164 files in other folders)
